// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component List empty 1`] = `
<div
  className="component-list sc-bdVaJa bDWFJH"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  />
</div>
`;

exports[`Storyshots Component List multiple items 1`] = `
<div
  className="component-list sc-bdVaJa bDWFJH"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <span
        className="sc-bxivhb gjJDQW"
      >
        foo
      </span>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <a
            className="sc-htpNat jMtDGO"
            href="/foo/bar"
            onClick={[Function]}
          >
            <span
              className="sc-ifAKCX hnOSUB"
              selected={false}
            >
              <input
                checked={false}
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
               
              bar
            </span>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component List multiple items with selection 1`] = `
<div
  className="component-list sc-bdVaJa bDWFJH"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <span
        className="sc-bxivhb gjJDQW"
      >
        foo
      </span>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <a
            className="sc-htpNat jMtDGO"
            href="/foo/bar"
            onClick={[Function]}
          >
            <span
              className="sc-ifAKCX dzQAzc"
              selected={true}
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
               
              bar
            </span>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component List single item 1`] = `
<div
  className="component-list sc-bdVaJa bDWFJH"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <span
        className="sc-bxivhb gjJDQW"
      >
        foo
      </span>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <a
            className="sc-htpNat jMtDGO"
            href="/foo/bar"
            onClick={[Function]}
          >
            <span
              className="sc-ifAKCX hnOSUB"
              selected={false}
            >
              <input
                checked={false}
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
               
              bar
            </span>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component List single item with selection 1`] = `
<div
  className="component-list sc-bdVaJa bDWFJH"
>
  <ul
    className="sc-bwzfXH iOBFVD"
  >
    <li>
      <span
        className="sc-bxivhb gjJDQW"
      >
        foo
      </span>
      <ul
        className="sc-bwzfXH iOBFVD"
      >
        <li>
          <a
            className="sc-htpNat jMtDGO"
            href="/foo/bar"
            onClick={[Function]}
          >
            <span
              className="sc-ifAKCX dzQAzc"
              selected={true}
            >
              <input
                checked={true}
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
               
              bar
            </span>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Sidebar closed 1`] = `
<div
  className="sidebar sc-bZQynM eTiRMk"
>
  <div
    className="sc-gZMcBi dcMSXI"
  >
    <span
      className="sidebar-toggle sc-gqjmRU dHZIyZ"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-list fa-w-16 fa-lg "
        data-icon="list"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128 116V76c0-8.837 7.163-16 16-16h352c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H144c-8.837 0-16-7.163-16-16zm16 176h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zM16 144h64c8.837 0 16-7.163 16-16V64c0-8.837-7.163-16-16-16H16C7.163 48 0 55.163 0 64v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Sidebar open and empty 1`] = `
<div
  className="sidebar sc-bZQynM dZUEhg"
>
  <div
    className="sc-gZMcBi dcMSXI"
  >
    <a
      className="sc-htoDjs jssEWI"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-dnqmqq cfRcuF"
      >
        <img
          alt=""
          className="logo sc-EHOje eJwasB"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-iwsKbI cIVfWq"
  />
  <div
    className="component-list sc-bdVaJa bDWFJH"
  >
    <ul
      className="sc-bwzfXH iOBFVD"
    />
  </div>
</div>
`;

exports[`Storyshots Sidebar open with components 1`] = `
<div
  className="sidebar sc-bZQynM dZUEhg"
>
  <div
    className="sc-gZMcBi dcMSXI"
  >
    <a
      className="sc-htoDjs jssEWI"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-dnqmqq cfRcuF"
      >
        <img
          alt=""
          className="logo sc-EHOje eJwasB"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-iwsKbI cIVfWq"
  />
  <div
    className="component-list sc-bdVaJa bDWFJH"
  >
    <ul
      className="sc-bwzfXH iOBFVD"
    >
      <li>
        <span
          className="sc-bxivhb gjJDQW"
        >
          foo
        </span>
        <ul
          className="sc-bwzfXH iOBFVD"
        >
          <li>
            <a
              className="sc-htpNat jMtDGO"
              href="/foo/bar"
              onClick={[Function]}
            >
              <span
                className="sc-ifAKCX hnOSUB"
                selected={false}
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                 
                bar
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
